syntax = "proto2";
package protocol;

message Msg_C2S {
    required ProtoId protoId = 1; //协议号
    required string token = 2;
    optional SystemHeart systemHeart = 3;
}

message Msg_S2C {
    required ProtoId protoId = 1; //协议号
    optional SystemError_S2C systemError_S2C = 2;
}

enum ProtoId {
    SYSTEM_HEART = 1001; //心跳
    SYSTEM_ERROR_S2C = 1002; //系统错误
}

message SystemHeart {
}

message SystemError_S2C {
    required string code = 1;
}